--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
 @import url('./fonts.css');
 @import url('./blocks/section.css');
 @import url('./blocks/table.css');
+@import url('./blocks/section-total-info.css');
 
 .page {
   font-family: 'DNS RotondaC', sans-serif;
