--- a/src/styles/blocks/section.css
+++ b/src/styles/blocks/section.css
@@ -62,13 +62,14 @@
   position: relative;
 }
 
-.section-result:hover {
-  filter: blur(2px);
-  opacity: 0.5;
-  background-color: rgba(0, 0, 0, 0.1);
+.section-result:has(.table-row):hover {
+  filter: blur(1px);
+  opacity: 0.2;
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
-.section-result:hover .section-result-cover {
+.section-result:has(.table-row):hover + .section-result-cover {
   visibility: visible;
 }
 
@@ -77,14 +78,14 @@
   border-radius: 10px;
   content: '';
   inset: 0;
-  cursor: pointer;
 }
 
 .section-result-cover {
+  pointer-events: none;
   position: absolute;
-  width: 7%;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 50px;
+  top: 30px;
+  right: calc((792px / 2) - 25px);
   visibility: hidden;
 }
 
