--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 @import url('./blocks/table.css');
 @import url('./blocks/section-total-info.css');
 @import url('./blocks/section-shipping-info.css');
+@import url('./blocks/dialog-add-file.css');
 
 .page {
   font-family: 'DNS RotondaC', sans-serif;
